@@ -1,46 +1,7 @@
 <configure
     xmlns="http://namespaces.zope.org/zope"
-    xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
-    xmlns:zcml="http://namespaces.zope.org/zcml"
     i18n_domain="linguaplone">
 
   <adapter factory=".LanguageIndex.LanguageIndexNodeAdapter" />
-
-  <configure zcml:condition="not-installed Products.Archetypes.exportimport.catalog">
-
-    <adapter factory=".reference.ReferenceCatalogXMLAdapter"/>
-    <adapter factory=".uid.UIDCatalogXMLAdapter"/>
-
-    <genericsetup:importStep
-        name="reference_catalog"
-        title="Reference Catalog"
-        description="Import reference catalog."
-        handler=".reference.importCatalogTool">
-      <depends name="toolset" />
-    </genericsetup:importStep>
-
-    <genericsetup:exportStep
-        name="reference_catalog"
-        title="Reference Catalog"
-        description="Export reference catalog."
-        handler=".reference.exportCatalogTool"
-        />
-
-    <genericsetup:importStep
-        name="uid_catalog"
-        title="UID Catalog"
-        description="Import uid catalog."
-        handler=".uid.importCatalogTool">
-      <depends name="toolset" />
-    </genericsetup:importStep>
-
-    <genericsetup:exportStep
-        name="uid_catalog"
-        title="UID Catalog"
-        description="Export uid catalog."
-        handler=".uid.exportCatalogTool"
-        />
-
-  </configure>
 
 </configure>
